estadisticas, mejora del grafico